# shared-files-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: errors.rs  lib.rs  reader.rs  temp_file.rs  traits.rs  writer.rs
tests/: nodelay.rs  parallel_write_read.rs  read_exact.rs
